Mon Aug  6 08:31:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * m4/compiler.m4:
          Added -wr as flag to WERROR, with this flag remarks are not
          promoted to error which caused several problems

Mon Aug  6 08:24:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h:
        * ace/OS_NS_sys_resource.inl:
          Changed ACE_LACKS_WIN32_GETPROCESSTIMES to ACE_LACKS_GETPROCESSTIMES
          to make a future autoconf check easier. Removed ACE_HAS_SYSCALL_GETRUSAGE
          which wasn't set in any config file

Mon Aug  6 07:58:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
          Added a check whether we have a 1 or 2 param mkdir method. This
          fixes bugzilla 2006. The other defines mentioned in this
          issue are not added because they are for VxWorks 5.5 only which
          we don't actively maintain anymore

Mon Aug  6 06:55:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * m4/compiler.m4:
          Added -i-dynamic to default icpc flags

Mon Aug  6 06:00:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_openvms.GNU:
          For Alpha use a different way to silence the warnings

Sun Aug  5 19:27:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SStringfwd.h:
          Check if __HP_aCC is defined before checking its value, fixes
          a remark in the Intel C++ autoconf build

Sat Aug  4 22:07:05 UTC 2007  Steve Huston  <shuston@riverace.com>

        * configure.ac: Removed the pthread_cond_timedwait() check - it was
          used to set ACE_HAS_POSIX_SEM_TIMEOUT and ACE_HAS_POSIX_SEM_TIMEOUT_
          EMULATION, neither of which it is related to. Added a correct check
          for sem_timedwait (ACE_HAS_POSIX_SEM_TIMEOUT).
          Also, used shortcut functions instead of hand-coding tests for
          pthread_attr_setstackaddr and pthread_attr_setstacksize.
