@@ -16,6 +16,7 @@
 #include /**/ "ace/pre.h"
 
 #include "ace/Auto_Ptr.h"
+#include "ace/Atomic_Op.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
@@ -98,7 +99,7 @@ public:
   X *get (void) const;
 
   /// Get the reference count value.
-  int count (void) const;
+  long count (void) const;
 
   /// Returns @c true if this object does not contain a valid pointer.
   bool null (void) const;
@@ -134,7 +135,7 @@ private:
   X *get (void) const;
 
   /// Get the reference count value.
-  int count (void) const;
+  long count (void) const;
 
   /// Declare the dynamic allocation hooks.
   ACE_ALLOC_HOOK_DECLARE;
@@ -167,12 +168,7 @@ private:
   ACE_Auto_Basic_Ptr<X> ptr_;
 
   /// Reference count.
-  int ref_count_;
-
-  // = Mutex variable to protect the <ptr_>.
-
-  /// Synchronization variable for serializing access to ref_count_
-  mutable ACE_LOCK lock_;
+  mutable ACE_Atomic_Op<ACE_LOCK, long> ref_count_;
 
 private:
   // = Constructor and destructor private.
